# metabase-mcp-python

./: .env.example  .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  tools-reference.md
docs/pt-BR/: architecture.md  tools-reference.md
src/metabase_mcp/: __init__.py  __main__.py  client.py  config.py  exceptions.py  models.py  server.py  validators.py
src/metabase_mcp/tools/: __init__.py  action.py  additional.py  bookmark.py  card.py  dashboard.py  database.py  field.py  notification.py  table.py
tests/: conftest.py  test_client.py  test_config.py  test_main.py  test_models.py  test_server.py  test_validators.py
tests/integration/: conftest.py  test_actions.py  test_auth.py  test_bookmarks.py  test_cards.py  test_collections.py  test_dashboards.py  test_databases.py  test_fields.py  test_notifications.py  test_search.py
tests/tools/: conftest.py  test_action.py  test_additional.py  test_bookmark.py  test_card.py  test_dashboard.py  test_database.py  test_field.py  test_notification.py  test_table.py  test_tools_init.py
