[project]
name = "metabase-mcp-python"
version = "0.1.0"
description = "A Python MCP server for Metabase integration, inspired by CognitionAI/metabase-mcp-server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "im-voracity" },
]
keywords = ["metabase", "mcp", "model-context-protocol", "ai", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.2.0,<4.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
]

[project.scripts]
metabase-mcp = "metabase_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/im-voracity/metabase-mcp-python"
Repository = "https://github.com/im-voracity/metabase-mcp-python"
Issues = "https://github.com/im-voracity/metabase-mcp-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metabase_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a real Metabase instance",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/metabase_mcp/tools/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
